# vectarine

./: .gitattributes  .gitignore  .luaurc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  bacon.toml  build.rs  cross.toml  game.lua  index.html  mise.toml  pyrightconfig.json  release-engine.py  rust-toolchain.toml  serve.py  test-runner.html  vectarine.code-workspace
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release.yml  test.yml
assets/scripts/: game.lua  game.luau  helper.luau  other_script.lua  other_script.luau
docs/: engine-design-principles.md  getting-started.md  integrated-debugging.md  js-rust-interaction.md  lua-code-organisation.md  targeting-the-web.md  user-manual.md  user_manual.md
docs/doc-generation-utils/: Dockerfile  eisvogel.latex
docs/engine/: game-project-structure.md  lua-code-organisation.md  plugins.md  targeting-the-web.md  vectarine-code-organisation.md
docs/website/: .gitattributes  .gitignore  README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/website/public/: install_linux.sh  install_mac.sh  install_nt.sh  install_win.ps1
docs/website/src/: content.config.ts
editor/: Cargo.toml  build.rs
editor-plugin-template/: Cargo.toml  README.md
editor-plugin-template/src/: lib.rs
editor/src/: buildinfo.rs  editorconfig.rs  editorconsole.rs  editorextrawindow.rs  editorinterface.rs  editormenu.rs  editorresources.rs  editorwatcher.rs  egui_sdl2_platform.rs  export.rs  exportinterface.rs  luau.rs  main.rs  pluginsystem.rs  projectstate.rs  reload.rs
editor/src/editorinterface/: editorconsole.rs  editormenu.rs  editorplugins.rs  editorpreferences.rs  editorprofiler.rs  editorresources.rs  editorwatcher.rs  emptyscreen.rs  extra.rs  geteditorpaths.rs
editor/src/editorinterface/emptyscreen/: createproject.rs
editor/src/editorinterface/extra/: geteditorpaths.rs  openfileatline.rs
editor/src/egui_sdl2_platform/: conversions.rs  platform.rs
editor/src/export/: exportinterface.rs  exportproject.rs
editor/src/pluginsystem/: gameplugin.rs  hash.rs  trustedplugin.rs
gallery/: README.md
gallery/AlienShooter/: game.vecta
gallery/AlienShooter/scripts/: game.luau
gallery/Learn Vectarine/: game.vecta
gallery/Learn Vectarine/scripts/: game.luau
gallery/Learn Vectarine/shaders/: base.glsl
gallery/No sign of a Pumpkin/: game.vecta
gallery/Platformer/: game.vecta
gallery/Pong/: game.vecta
gallery/Pong/scripts/: game.luau
gallery/Slime Escape/: game.vecta
gallery/Snake/: game.vecta
gallery/Sokoban/: .gitignore  .luaurc  game.vecta
gallery/scratchpad/: game.vecta
gallery/snake/: game.vecta
gamedata/: game.vecta
gamedata/scripts/: game.luau
lua-api/: event.d.luau  graphics.d.lua  graphics.d.luau  io.d.lua  io.d.luau  resources.d.lua  resources.d.luau  resources.luau  vec.d.lua  vec.d.luau  vec.luau
luau-api/: audio.luau  camera.luau  canvas.luau  color.luau  coord.luau  coords.luau  debug.luau  event.luau  fastlist.luau  future.luau  global.d.luau  graphics.luau  image.luau  io.luau  loader.luau  persist.luau  physics.luau  resource.luau  resources.luau  screen.luau  text.luau  tile.luau  ui.luau  vec.luau  vec4.luau
runtime/: Cargo.toml  build.rs
runtime/src/: console.rs  dbvh.rs  draw_instruction.rs  game.rs  game_resource.rs  graphics.rs  helpers.rs  inithelpers.rs  io.rs  lib.rs  loader.rs  lua_env.rs  main.rs  math.rs  metrics.rs  native_plugin.rs  projectinfo.rs  runtime.rs  sound.rs  space.rs  space2.rs
runtime/src/game_resource/: audio_resource.rs  font_resource.rs  image_resource.rs  script_resource.rs  shader_resource.rs  text_resource.rs  tile_resource.rs
runtime/src/graphics/: affinetransform.rs  batchdraw.rs  draw_instruction.rs  glbuffer.rs  gldraw.rs  glframebuffer.rs  glprogram.rs  glstencil.rs  gltexture.rs  gltypes.rs  gluniforms.rs  shadersources.rs  shape.rs
runtime/src/helpers/: draw_instruction.rs  file.rs  game.rs  game_resource.rs  io.rs  lua_env.rs
runtime/src/helpers/game_resource/: font_resource.rs  image_resource.rs  script_resource.rs
runtime/src/helpers/lua_env/: graphics.rs  vec2.rs
runtime/src/io/: dummyfs.rs  file.rs  fs.rs  localfs.rs  time.rs  zipfs.rs
runtime/src/lua_env/: graphics.rs  lua_audio.rs  lua_camera.rs  lua_canvas.rs  lua_coord.rs  lua_coords.rs  lua_debug.rs  lua_event.rs  lua_fastlist.rs  lua_graphics.rs  lua_image.rs  lua_io.rs  lua_loader.rs  lua_persist.rs  lua_physics.rs  lua_resource.rs  lua_screen.rs  lua_text.rs  lua_tile.rs  lua_ui.rs  lua_vec2.rs  lua_vec4.rs  vec2.rs
runtime/src/lua_env/lua_tile/: tilemap.rs
runtime/src/lua_env/lua_ui/: column_widget.rs  generic_widget.rs  image_widget.rs  row_widget.rs  scrollable_area_widget.rs  slider_widget.rs  stack_widget.rs  tab_widget.rs  text_widget.rs
runtime/src/native_plugin/: plugininterface.rs
runtime/src/native_plugin/native_plugin_impl/: desktop.rs  emscripten.rs  mod.rs
runtime/src/runtime/: draw_instruction.rs  file.rs  game.rs  lua_env.rs  maybelater.rs
runtime/src/space/: collider.rs  dbvh.rs  transform.rs
runtime/src/space2/: collider2.rs  transform2.rs
scripts/: env-for-web-thread-build.ps1  release-engine.py  run-web.py  serve.py
testdata/AlienShooter/: platformer-vecta-test.toml
testdata/Platformer/: platformer-vecta-test.toml
testdata/Snake/: snake-logs.txt  snake-vecta-test.toml  snake2-greeting.txt  snake2-vecta-test.toml  test.toml
testdata/Sokoban/: sokoban-vecta-test.toml
vectarine-cli/: Cargo.toml  README.md  testing.md
vectarine-cli/src/: cliarg.rs  features.rs  headless.rs  lib.rs  main.rs  project.rs
vectarine-cli/src/features/: createproject.rs  export.rs  screenshot.rs  testproject.rs
vectarine-cli/src/project/: copydirall.rs  createproject.rs  exportproject.rs  geteditorpaths.rs  projectinfo.rs
vectarine-plugin-sdk/: Cargo.toml  README.md
vectarine-plugin-sdk/src/: lib.rs  plugininterface.rs
vectarine-plugin-template/: .gitignore  Cargo.toml  README.md  build.rs  bundle.py  manifest.toml  plugin.luau
vectarine-plugin-template/src/: lib.rs
(+65 files in other folders)
