[workspace]
resolver = "3"
members = ["editor", "runtime", "vectarine-plugin-template", "vectarine-plugin-sdk"]

[profile.dev]
# Emscripten does not like -O2 + debug info
opt-level = 1
lto = "off"
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev.package.rapier2d]
opt-level = 3

[profile.release]
# Extra 
lto = "fat"
strip = "symbols"
# Same as usual
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
