[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.2"
egui_extras = "0.32.3"
egui_glow = "0.32.2"
egui_sdl2_platform = "0.4.0"
glow = "0.16.0"
notify-debouncer-full = "0.6.0"
open = "5.3.2"
runtime = { path = "../runtime", version = "0.1.0" }
sdl2-sys = "0.38.0"
serde = { version = "1.0.221", features = ["derive"] }
toml = "0.9.5"

[[bin]]
name = "vecta"
path = "src/main.rs"
