[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.2"
egui_extras = "0.32.3"
egui_glow = "0.32.2"
glow = "0.16.0"
lazy_static = "1.5.0"
notify-debouncer-full = "0.6.0"
open = "5.3.2"
regex = "1.12.2"
rfd = "0.15.4"
runtime = { path = "../runtime", version = "0.1.0" }
sdl2-sys = "0.38.0"
serde = { version = "1.0.221", features = ["derive"] }
zip = "6.0.0"

[[bin]]
name = "vecta"
path = "src/main.rs"

[build-dependencies]
winresource = "0.1.23"
