[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
egui_extras = "0.32.3"
glow = "0.16.0"
lazy_static = "1.5.0"
notify-debouncer-full = "0.6.0"
open = "5.3.2"
regex = "1.12.2"
rfd = "0.15.4"
runtime = { path = "../runtime", version = "0.1.0" }
sdl2-sys = "0.38.0"
serde = { version = "1.0.221", features = ["derive"] }
which = "8.0.0"
zip = "6.0.0"

[[bin]]
name = "vecta"
path = "src/main.rs"

[build-dependencies]
chrono = "0.4.42"
winresource = "0.1.23"

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
enum_glob_use = "warn"
elidable_lifetime_names = "warn"
empty_enum = "warn"
error_impl_error = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_test_prefix = "warn"
ref_option = "warn"
ref_option_ref = "warn"
unwrap_used = "warn"
unnecessary_wraps = "warn"
