[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.2"
egui_glow = "0.32.2"
egui_sdl2_platform = "0.4.0"
fontdue = "0.9.3"
glow = "0.16.0"
image = { version = "0.25.8", features = ["png", "bmp", "jpeg", "ico", "gif", "webp"] }
mlua = { version = "0.11.2", features = ["luau", "serde", "vendored"] }
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"] }

[target.'cfg(any(target_os = "macos"))'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"] }

[target.'cfg(any(target_os = "linux"))'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer", "static-link", "use-pkgconfig"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer"] }

emscripten-val = { git = "https://github.com/vanyle/emscripten-val", package = "emscripten-val", rev = "2f77cc9" }
emscripten-functions = "0.3.0"
base64 = "0.22.1"
[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"

# to check for a new release, check https://github.com/microsoft/vcpkg/releases
# https://github.com/microsoft/vcpkg/commit/50c0cb48a0cf2f6fc5c7b2c0d2bafbe26d0a7ca2
rev = "50c0cb4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
aarch64-apple-darwin = { triplet = "arm64-osx" }
