[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
egui = "0.32.2"
fontdue = "0.9.3"
glow = "0.16.0"
image = { version = "0.25.8", features = ["png", "bmp", "jpeg", "ico", "gif", "webp"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
tiled = { version = "0.15.0", features = ["wasm"] }
toml = "0.9.8"
zip = "6.0.0"

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"] }
mlua = { version = "0.11.2", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(any(target_os = "macos"))'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer", "static-link", "use-vcpkg"] }
mlua = { version = "0.11.2", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(any(target_os = "linux"))'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer", "static-link", "use-pkgconfig"] }
mlua = { version = "0.11.2", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["ttf", "image", "gfx", "mixer"] }
mlua = { version = "0.11.2", features = ["luau", "serde", "vendored"] }

emscripten-val = { git = "https://github.com/vanyle/emscripten-val", package = "emscripten-val", rev = "2f77cc9" }
emscripten-functions = "0.3.0"
base64 = "0.22.1"

[build-dependencies]
winresource = "0.1.23"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx", "sdl2-mixer"]
git = "https://github.com/microsoft/vcpkg"

# To check for a new release, check https://github.com/microsoft/vcpkg/releases
# https://github.com/microsoft/vcpkg/commit/50c0cb48a0cf2f6fc5c7b2c0d2bafbe26d0a7ca2
rev = "50c0cb4"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
aarch64-apple-darwin = { triplet = "arm64-osx" }

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
enum_glob_use = "warn"
elidable_lifetime_names = "warn"
empty_enum = "warn"
error_impl_error = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_test_prefix = "warn"
ref_option = "warn"
ref_option_ref = "warn"
unwrap_used = "warn"
unnecessary_wraps = "warn"
# Might need to enable this as arithmetic can panic
# arithmetic_side_effects = "warn"
