[package]
name = "runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
fontdue = "0.9.3"
image = { version = "0.25.8", features = ["png", "bmp", "jpeg", "ico", "gif", "webp"] }
tiled = { version = "0.15.0", features = ["wasm"] }
zip = "6.0.0"
bincode = "1.3.3"
serde_json = "1.0"
regex = "1.12.2"
noise = "0.9.0"
symphonia = "0.5.5"
num-traits = "0.2.19"
nalgebra = "0.34.1"
vectarine-plugin-sdk = { path = "../vectarine-plugin-sdk" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
libloading = "0.9.0"

[target.'cfg(target_os = "emscripten")'.dependencies]
emscripten-val = { git = "https://github.com/vanyle/emscripten-val", package = "emscripten-val", rev = "2f77cc9" }
emscripten-functions = "0.3.0"
base64 = "0.22.1"

[build-dependencies]
winresource = "0.1.23"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
aarch64-apple-darwin = { triplet = "arm64-osx" }

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "50c0cb4"

[features]
editor = [] # Enabled when in editor mode.

# https://rust-lang.github.io/rust-clippy/master/index.html
[lints.clippy]
enum_glob_use = "warn"
elidable_lifetime_names = "warn"
empty_enums = "warn"
error_impl_error = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_test_prefix = "warn"
ref_option = "warn"
ref_option_ref = "warn"
unwrap_used = "warn"
unnecessary_wraps = "warn"
# Might need to enable this as arithmetic can panic
# arithmetic_side_effects = "warn"
