[package]
name = "vectarine-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
vectarine-plugin-sdk = { path = "../vectarine-plugin-sdk" }
runtime = { path = "../runtime" }
zip = "6.0.0"
regex = "1.12.2"
directories = "6.0.0"

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"
rev = "50c0cb4"

[lints.clippy]
enum_glob_use = "warn"
elidable_lifetime_names = "warn"
empty_enums = "warn"
error_impl_error = "warn"
range_plus_one = "warn"
range_minus_one = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_clone = "warn"
redundant_test_prefix = "warn"
ref_option = "warn"
ref_option_ref = "warn"
unwrap_used = "warn"
unnecessary_wraps = "warn"
