[package]
name = "vectarine-plugin-sdk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.100"
egui = "0.32.2"
egui_glow = "0.32.2"
toml = "0.9.8"
rapier2d = "0.31.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Mar 28, 2026 commit, needed for Rust 1.94 compatibility, >0.11.6
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "c5aadc68cdc475871d30cc53411b059f02daceb8", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(any(target_os = "macos"))'.dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "c5aadc68cdc475871d30cc53411b059f02daceb8", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(any(target_os = "linux"))'.dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "c5aadc68cdc475871d30cc53411b059f02daceb8", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "c5aadc68cdc475871d30cc53411b059f02daceb8", features = ["luau", "serde", "vendored"] }
