[package]
name = "vectarine-plugin-sdk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.100"
egui = "0.34.1"
egui_glow = "0.34.1"
glow = "0.17.0"
toml = "0.9.8"
rapier2d = "0.31.0"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["static-link", "use-vcpkg"] }
# Jun 1, 2026 commit, needed for Rust 1.94 compatibility, >0.11.6
# Targets Luau 0.714
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "15fb63b2a24be7dd3cdeb55b1f762a9d213f0a69", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(any(target_os = "macos"))'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["static-link", "use-vcpkg"] }
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "15fb63b2a24be7dd3cdeb55b1f762a9d213f0a69", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(any(target_os = "linux"))'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = ["static-link", "bundled"] }
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "15fb63b2a24be7dd3cdeb55b1f762a9d213f0a69", features = ["luau-jit", "serde", "vendored"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
sdl2 = { version = "0.38", default-features = false, features = [] }
mlua = { git = "https://github.com/mlua-rs/mlua", rev = "15fb63b2a24be7dd3cdeb55b1f762a9d213f0a69", features = ["luau", "serde", "vendored"] }

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"

# To check for a new release, check https://github.com/microsoft/vcpkg/releases
# https://github.com/microsoft/vcpkg/commit/50c0cb48a0cf2f6fc5c7b2c0d2bafbe26d0a7ca2
rev = "50c0cb4"
